# blackhole-screensaver

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  build.rs
.github/workflows/: release.yml
example/: config.toml
src/: animator.rs  app.rs  autostart.rs  config.rs  daemon.rs  desktop.rs  desktop_layout.rs  fullscreen_check.rs  logging.rs  main.rs  mode.rs  preview.rs  renderer.rs  shader.wgsl  shared_mem.rs
