[package]
name = "blackhole-screensaver"
version = "0.1.0"
edition = "2021"
description = "A Schwarzschild black hole screensaver for Windows"
license = "MIT"

[[bin]]
name = "blackhole"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
winit = "0.30"
wgpu = "22"
raw-window-handle = "0.6"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
tray-icon = "0.19"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Registry",
] }

# [build-dependencies]
# embed-resource = "2"  # enable when adding a .rc with icon / version info
